--- a/php/composer.json
+++ b/php/composer.json
@@ -8,7 +8,8 @@
     "ext-mysqlnd": "*",
     "vlucas/phpdotenv": "^5.6",
     "slim/slim": "^4.14",
-    "slim/psr7": "^1.8"
+    "slim/psr7": "^1.8",
+    "phpmailer/phpmailer": "^7.0"
   },
   "autoload": {
     "psr-4": {
