--- a/php/composer.json
+++ b/php/composer.json
@@ -4,12 +4,14 @@
   "type": "project",
   "require": {
     "php": "^8.1",
+    "ext-mbstring": "*",
     "ext-pdo": "*",
     "ext-mysqlnd": "*",
     "vlucas/phpdotenv": "^5.6",
     "slim/slim": "^4.14",
     "slim/psr7": "^1.8",
-    "phpmailer/phpmailer": "^7.0"
+    "phpmailer/phpmailer": "^7.0",
+    "chillerlan/php-qrcode": "^5.0"
   },
   "autoload": {
     "psr-4": {
