--- a/php/composer.json
+++ b/php/composer.json
@@ -11,7 +11,9 @@
     "slim/slim": "^4.14",
     "slim/psr7": "^1.8",
     "phpmailer/phpmailer": "^7.0",
-    "chillerlan/php-qrcode": "^5.0"
+    "chillerlan/php-qrcode": "^5.0",
+    "tecnickcom/tcpdf": "^6.10",
+    "maennchen/zipstream-php": "^3.0"
   },
   "autoload": {
     "psr-4": {
