--- a/php/composer.json
+++ b/php/composer.json
@@ -13,7 +13,8 @@
     "phpmailer/phpmailer": "^7.0",
     "chillerlan/php-qrcode": "^5.0",
     "tecnickcom/tcpdf": "^6.10",
-    "maennchen/zipstream-php": "^3.0"
+    "maennchen/zipstream-php": "^3.0",
+    "lbuchs/webauthn": "^2.0"
   },
   "autoload": {
     "psr-4": {
